ast/Fac.java
/* Generated By:JJTree&JavaCC: Do not edit this line. Fac.java */
package ast;

import java.io.FileReader;

import symboltable.Main;

import java.io.FileNotFoundException;

public class Fac/*@bgen(jjtree)*/implements FacTreeConstants, FacConstants {/*@bgen(jjtree)*/
  protected static JJTFacState jjtree = new JJTFacState();public int computeFac(SimpleNode node) {
        return 0;
    }

    public static String fname;

    public static void main(String[] args) throws ParseException {
        /** Validate arguments */
        if(args.length != 1) {
          System.out.println("Usage: " + args[0] + " <filename.jmm>");
          System.exit(1);
        }
        fname = args[0];
        /** Open file */
        try {
            FileReader fileReader = new FileReader(args[0]);
            Fac fac = new Fac(fileReader);
            SimpleNode root = fac.Program();

            root.dump("");

            Main.createSymbolTable(root);

            System.exit(0);

        } catch (FileNotFoundException e) {
            System.out.println("Failed to open file " + args[0]);
            System.exit(1);
        }
    }

    public static void showError(ParseException e, String errorMessage) {
        System.out.println(errorMessage);
    }

  static boolean contains(final int[] array, final int v) throws ParseException {
                                                  /*@bgen(jjtree) contains */
 ASTcontains jjtn000 = new ASTcontains(JJTCONTAINS);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);
 try {boolean result = false;

    for(int i : array){
        if(i == v){
            result = true;
            break;
        }
    }

    return result;/*@bgen(jjtree)*/
 } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
 }
  }

  static void error_skipto(int[] kinds) throws ParseException {
                                /*@bgen(jjtree) error_skipto */
ASTerror_skipto jjtn000 = new ASTerror_skipto(JJTERROR_SKIPTO);
boolean jjtc000 = true;
jjtree.openNodeScope(jjtn000);
try {ParseException e = generateParseException();  // generate the exception object.
  //System.out.println(e.toString());  // print the error message
  Token t;
  do {
    t = getNextToken();
    System.out.println(t);
  } while (!contains(kinds, t.kind));/*@bgen(jjtree)*/
} finally {
  if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
}
  }

  static final public SimpleNode Program() throws ParseException {
                       /*@bgen(jjtree) Program */
  ASTProgram jjtn000 = new ASTProgram(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        ClassDeclaration();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CLASS:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
      }
      jj_consume_token(0);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
        {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void ClassDeclaration() throws ParseException {
                           /*@bgen(jjtree) ClassDeclaration */
                           ASTClassDeclaration jjtn000 = new ASTClassDeclaration(JJTCLASSDECLARATION);
                           boolean jjtc000 = true;
                           jjtree.openNodeScope(jjtn000);Token className, extendIdent;
    try {
      jj_consume_token(CLASS);
      className = jj_consume_token(IDENTIFIER);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EXTENDS:
        jj_consume_token(EXTENDS);
        extendIdent = jj_consume_token(IDENTIFIER);
                                         jjtn000.extendsClassName = extendIdent.image;
        break;
      default:
        jj_la1[1] = jj_gen;
        ;
      }
      jj_consume_token(OPEN_CURLY_BRACKET);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INT:
        case BOOLEAN:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        VarDeclaration();
      }
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PUBLIC:
          ;
          break;
        default:
          jj_la1[3] = jj_gen;
          break label_3;
        }
        jj_consume_token(PUBLIC);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STATIC:
          MainDeclaration();
          break;
        case INT:
        case BOOLEAN:
        case IDENTIFIER:
          MethodDeclaration();
          break;
        default:
          jj_la1[4] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(CLOSE_CURLY_BRACKET);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
     jjtn000.className=className.image;
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void VarDeclaration() throws ParseException {
                         /*@bgen(jjtree) VarDeclaration */
                         ASTVarDeclaration jjtn000 = new ASTVarDeclaration(JJTVARDECLARATION);
                         boolean jjtc000 = true;
                         jjtree.openNodeScope(jjtn000);Token ident;
    try {
      Type();
      ident = jj_consume_token(IDENTIFIER);
      jj_consume_token(PVIRG);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
         jjtn000.identifier = ident.image;
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void MainDeclaration() throws ParseException {
                          /*@bgen(jjtree) MainDeclaration */
                          ASTMainDeclaration jjtn000 = new ASTMainDeclaration(JJTMAINDECLARATION);
                          boolean jjtc000 = true;
                          jjtree.openNodeScope(jjtn000);Token param;
    try {
      jj_consume_token(STATIC);
      jj_consume_token(VOID);
      jj_consume_token(MAIN);
      jj_consume_token(OPEN_PARENTHESES);
      jj_consume_token(STRING);
      jj_consume_token(OPEN_BRACKET);
      jj_consume_token(CLOSE_BRACKET);
      param = jj_consume_token(IDENTIFIER);
      jj_consume_token(CLOSE_PARENTHESES);
      jj_consume_token(OPEN_CURLY_BRACKET);
      MethodBody();
      jj_consume_token(CLOSE_CURLY_BRACKET);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
     jjtn000.param = param.image;
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void MethodDeclaration() throws ParseException {
                            /*@bgen(jjtree) MethodDeclaration */
                            ASTMethodDeclaration jjtn000 = new ASTMethodDeclaration(JJTMETHODDECLARATION);
                            boolean jjtc000 = true;
                            jjtree.openNodeScope(jjtn000);Token ident;
    try {
      Type();
      ident = jj_consume_token(IDENTIFIER);
      jj_consume_token(OPEN_PARENTHESES);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case BOOLEAN:
      case IDENTIFIER:
        MethodParameter();
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case VIRG:
            ;
            break;
          default:
            jj_la1[5] = jj_gen;
            break label_4;
          }
          jj_consume_token(VIRG);
          MethodParameter();
        }
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
      jj_consume_token(CLOSE_PARENTHESES);
      jj_consume_token(OPEN_CURLY_BRACKET);
      MethodBody();
      MethodReturn();
      jj_consume_token(CLOSE_CURLY_BRACKET);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
     jjtn000.identifier=ident.image;
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void MethodParameter() throws ParseException {
                          /*@bgen(jjtree) MethodParameter */
                          ASTMethodParameter jjtn000 = new ASTMethodParameter(JJTMETHODPARAMETER);
                          boolean jjtc000 = true;
                          jjtree.openNodeScope(jjtn000);Token ident;
    try {
      Type();
      ident = jj_consume_token(IDENTIFIER);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
     jjtn000.identifier=ident.image;
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void MethodBody() throws ParseException {
                     /*@bgen(jjtree) MethodBody */
  ASTMethodBody jjtn000 = new ASTMethodBody(JJTMETHODBODY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_5:
      while (true) {
        if (jj_2_1(2)) {
          ;
        } else {
          break label_5;
        }
        VarDeclaration();
      }
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case WHILE:
        case OPEN_CURLY_BRACKET:
        case OPEN_PARENTHESES:
        case NEW:
        case THIS:
        case TRUE:
        case FALSE:
        case LENGTH:
        case NOT:
        case OCTAL_NUMBER:
        case HEX_NUMBER:
        case BINARY_NUMBER:
        case INTEGERLITERAL:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_6;
        }
        Statement();
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void MethodReturn() throws ParseException {
                       /*@bgen(jjtree) MethodReturn */
  ASTMethodReturn jjtn000 = new ASTMethodReturn(JJTMETHODRETURN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(RETURN);
      Expression();
      jj_consume_token(PVIRG);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Type() throws ParseException {
               /*@bgen(jjtree) Type */
               ASTType jjtn000 = new ASTType(JJTTYPE);
               boolean jjtc000 = true;
               jjtree.openNodeScope(jjtn000);Token type;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
        type = jj_consume_token(BOOLEAN);
        break;
      case INT:
        type = jj_consume_token(INT);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case OPEN_BRACKET:
          jj_consume_token(OPEN_BRACKET);
          jj_consume_token(CLOSE_BRACKET);
                                                jjtn000.isArray=true;
          break;
        default:
          jj_la1[8] = jj_gen;
          ;
        }
        break;
      case IDENTIFIER:
        type = jj_consume_token(IDENTIFIER);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
     jjtn000.dataType = type.image;
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void Statement() throws ParseException {
                          Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OPEN_CURLY_BRACKET:
      jj_consume_token(OPEN_CURLY_BRACKET);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case WHILE:
        case OPEN_CURLY_BRACKET:
        case OPEN_PARENTHESES:
        case NEW:
        case THIS:
        case TRUE:
        case FALSE:
        case LENGTH:
        case NOT:
        case OCTAL_NUMBER:
        case HEX_NUMBER:
        case BINARY_NUMBER:
        case INTEGERLITERAL:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[10] = jj_gen;
          break label_7;
        }
        Statement();
      }
      jj_consume_token(CLOSE_CURLY_BRACKET);
      break;
    case IF:
      If();
      break;
    case WHILE:
      While();
      break;
    case OPEN_PARENTHESES:
    case NEW:
    case THIS:
    case TRUE:
    case FALSE:
    case LENGTH:
    case NOT:
    case OCTAL_NUMBER:
    case HEX_NUMBER:
    case BINARY_NUMBER:
    case INTEGERLITERAL:
    case IDENTIFIER:
      Expression();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PVIRG:
        jj_consume_token(PVIRG);
        break;
      case EQUAL:
        jj_consume_token(EQUAL);
        Expression();
                               ASTEqual jjtn001 = new ASTEqual(JJTEQUAL);
                               boolean jjtc001 = true;
                               jjtree.openNodeScope(jjtn001);
        try {
          jj_consume_token(PVIRG);
        } finally {
                               if (jjtc001) {
                                 jjtree.closeNodeScope(jjtn001,  2);
                               }
        }
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void If() throws ParseException {
             /*@bgen(jjtree) If */
  ASTIf jjtn000 = new ASTIf(JJTIF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      try {
        IfCondition();
        IfBody();
        ElseBody();
      } catch (ParseException e) {
        showError(e, "if error");
        System.exit(0);
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void IfCondition() throws ParseException {
                      /*@bgen(jjtree) IfCondition */
  ASTIfCondition jjtn000 = new ASTIfCondition(JJTIFCONDITION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      try {
        jj_consume_token(IF);
        jj_consume_token(OPEN_PARENTHESES);
        Expression();
        jj_consume_token(CLOSE_PARENTHESES);
      } catch (ParseException e) {
        showError(e, "if error");
        System.exit(0);
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void IfBody() throws ParseException {
                 /*@bgen(jjtree) IfBody */
  ASTIfBody jjtn000 = new ASTIfBody(JJTIFBODY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      try {
        Statement();
      } catch (ParseException e) {
        showError(e, "if error");
        System.exit(0);
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void ElseBody() throws ParseException {
                   /*@bgen(jjtree) ElseBody */
  ASTElseBody jjtn000 = new ASTElseBody(JJTELSEBODY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      try {
        jj_consume_token(ELSE);
        Statement();
      } catch (ParseException e) {
        showError(e, "if error");
        System.exit(0);
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void While() throws ParseException {
                /*@bgen(jjtree) While */
  ASTWhile jjtn000 = new ASTWhile(JJTWHILE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      try {
        jj_consume_token(WHILE);
        jj_consume_token(OPEN_PARENTHESES);
        WhileCondition();
        jj_consume_token(CLOSE_PARENTHESES);
        WhileBody();
      } catch (ParseException e) {
        int i = 1;
        Token t, ft = getToken(i);
        do {
            t = getToken(i++);
            // System.out.print(tokenImage[t.kind]);
            // System.out.print(" => ");
            // System.out.println(t.image);
        } while (!contains(new int[]{OPEN_CURLY_BRACKET}, t.kind));
        for(;i>2;i--){
            Token t1 = getNextToken();
            // read all tokens until OPEN_CURLY_BRACKET
        }

        // report error on while condition
        System.out.println("[ERROR] "+Fac.fname+":"+ft.beginLine+":"+ft.beginColumn+" Token `" +ft+ "` was not recognized");

        // proceed to while body
        WhileBody();
        {if (true) return;}
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void WhileCondition() throws ParseException {
                         /*@bgen(jjtree) WhileCondition */
  ASTWhileCondition jjtn000 = new ASTWhileCondition(JJTWHILECONDITION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Expression();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void WhileBody() throws ParseException {
                    /*@bgen(jjtree) WhileBody */
  ASTWhileBody jjtn000 = new ASTWhileBody(JJTWHILEBODY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Statement();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }
